--- a/HaybaleApp.Infrastructure/HaybaleApp.Infrastructure.csproj
+++ b/HaybaleApp.Infrastructure/HaybaleApp.Infrastructure.csproj
@@ -15,4 +15,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.6" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\HaybaleApp.Core\HaybaleApp.Core.csproj" />
+  </ItemGroup>
+
 </Project>
