--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,17 @@
+# Build output
 bin/
 obj/
+*.dll
+*.exe
+*.pdb
+*.cache
+*.log
+
+# User-specific
 *.user
 *.suo
-*.db
-*.log
 .vscode/
 .env
+
+# EF Migrations build artifacts
+Migrations/
