--- a/HaybaleApp.API/appsettings.json
+++ b/HaybaleApp.API/appsettings.json
@@ -7,7 +7,12 @@
   },
   "AllowedHosts": "*",
   
-  "ConnectionStrings": {
+    "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=HaybaleDb;Trusted_Connection=True;"
+  },
+
+    "Jwt": {
+    "Key": "this_is_a_dev_secret_key_123",
+    "Issuer": "HaybaleApp"
   }
 }
