fix: update jwtkey to a longer one

--- a/HaybaleApp.API/appsettings.json
+++ b/HaybaleApp.API/appsettings.json
@@ -12,7 +12,7 @@
   },
 
     "Jwt": {
-    "Key": "this_is_a_dev_secret_key_123",
+    "Key": "this_is_a_very_secure_dev_key_123456!",
     "Issuer": "HaybaleApp"
   }
 }
